Changes in version 2023.11.11

- new function get_sha_vec, which is called in atime_versions_exprs, to check for correctly specified versions (new helpful errors when versions are not specified correctly)

Changes in version 2023.10.9

- default and errors for N in atime.
- warning if only one N evaluated in atime.
- error if no SHA specified in atime_versions.
- regex vignette/test uses re2 if present.

Changes in version 2023.4.27

- predict.references_best(kilobytes=1000) etc.

Changes in version 2023.3.31

- delete test which failed on CRAN.

Changes in version 2023.3.30

- atime_grid(list(VAR="one value")) no longer errors.

Changes in version 2023.1.24

- new function atime_pkg with vignette ci.Rmd.

Changes in version 2022.12.14

- new function atime_grid.
- atime argument results changed to result to be consistent with result column of output.

Changes in version 2022.9.16

- if(FALSE) in atime_versions*.Rd examples, for CRAN.

Changes in version 2022.9.8

- git vignette uses eval=F, .libPaths under /tmp, for CRAN.
- try() in binseg and cum_median vignettes, for CRAN.

Changes in version 2022.8.25

- remove callr in examples (keep in vignette).

Changes in version 2022.8.24

- CRAN suggestions.

Changes in version 2022.8.16

- use callr in examples/vignettes to avoid CRAN warnings.

Changes in version 2022.7.26

- new vignette: data.table.
- new atime_versions_exprs function.

Changes in version 2022.7.22

- new vignette: git.
- new atime_versions function.

Changes in version 2022.7.20

- new vignettes: cum_median, PeakSegDisk.
- new references_best function.

Changes in version 2022.7.13

- initial version with atime function.
- vignettes: regex, binseg, optseg.